--- a/frontend/app/src/main/res/navigation/nav_main.xml
+++ b/frontend/app/src/main/res/navigation/nav_main.xml
@@ -2,7 +2,8 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_main">
+    android:id="@+id/nav_main"
+    app:startDestination="@id/profileFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -10,9 +11,13 @@
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_home_to_settings"
-            app:destination="@id/settingsFragment" />
+            android:id="@+id/action_home_to_profile"
+            app:destination="@id/profileFragment"/>
+        <action
+            android:id="@+id/action_home_to_friend_list"
+            app:destination="@id/friendListFragment"/>
     </fragment>
+
     <fragment
         android:id="@+id/loginFragment"
         android:name="id.emergence.wher.screen.login.LoginFragment"
@@ -23,16 +28,50 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/nav_main"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_login_to_register"
+            app:destination="@id/registerFragment" />
     </fragment>
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="id.emergence.wher.screen.settings.SettingsFragment"
-        android:label="SettingsFragment"
-        tools:layout="@layout/fragment_settings">
+        android:id="@+id/splashFragment"
+        android:name="id.emergence.wher.screen.splash.SplashFragment"
+        android:label="SplashFragment"
+        tools:layout="@layout/fragment_splash">
         <action
-            android:id="@+id/action_settings_to_login"
+            android:id="@+id/action_splash_to_login"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_splash_to_register"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="id.emergence.wher.screen.register.RegisterFragment"
+        android:label="RegisterFragment"
+        tools:layout="@layout/fragment_register">
+        <action
+            android:id="@+id/action_register_to_login"
             app:destination="@id/loginFragment"
-            app:popUpTo="@id/nav_main"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/splashFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="id.emergence.wher.screen.profile.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profile_to_friend_list"
+            app:destination="@id/friendListFragment"
+            app:popUpTo="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/friendListFragment"
+        android:name="id.emergence.wher.screen.friends.list.FriendListFragment"
+        android:label="FriendListFragment"
+        tools:layout="@layout/fragment_friend_list" >
+        <action
+            android:id="@+id/action_friend_list_to_profile"
+            app:destination="@id/profileFragment"
+            app:popUpTo="@id/homeFragment" />
     </fragment>
 </navigation>
