--- a/frontend/app/src/main/res/navigation/nav_main.xml
+++ b/frontend/app/src/main/res/navigation/nav_main.xml
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="id.emergence.wher.screen.login.LoginFragment"
+        android:name="id.emergence.wher.screen.auth.login.LoginFragment"
         android:label="LoginFragment"
         tools:layout="@layout/fragment_login">
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/splashFragment"
-        android:name="id.emergence.wher.screen.splash.SplashFragment"
+        android:name="id.emergence.wher.screen.auth.splash.SplashFragment"
         android:label="SplashFragment"
         tools:layout="@layout/fragment_splash">
         <action
@@ -46,7 +46,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="id.emergence.wher.screen.register.RegisterFragment"
+        android:name="id.emergence.wher.screen.auth.register.RegisterFragment"
         android:label="RegisterFragment"
         tools:layout="@layout/fragment_register">
         <action
