--- a/frontend/app/src/main/res/layout/fragment_login.xml
+++ b/frontend/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/lbl_logo"
         android:layout_width="wrap_content"
