feat: login + register
finally tested using real API

--- a/frontend/app/src/main/res/layout/fragment_login.xml
+++ b/frontend/app/src/main/res/layout/fragment_login.xml
@@ -57,7 +57,9 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textColor="@color/brand_purple"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:inputType="textEmailAddress"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/lbl_password"
@@ -83,11 +85,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="64dp"
+        android:textColor="@color/brand_purple"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
         android:inputType="textPassword"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
