--- a/frontend/app/src/main/res/layout/fragment_register.xml
+++ b/frontend/app/src/main/res/layout/fragment_register.xml
@@ -3,7 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg">
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/lbl_logo"
@@ -48,9 +57,12 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
         android:inputType="text"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
+        tools:text="varoalvaro493@gmail.com"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
         android:textAlignment="center"
+        android:textColor="@color/brand_purple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lbl_username" />
@@ -73,8 +85,10 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
         android:inputType="textEmailAddress"
+        android:textColor="@color/brand_purple"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,9 +111,11 @@
         android:layout_marginHorizontal="64dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
+        android:textColor="@color/brand_purple"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,8 +139,10 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
         android:inputType="textPassword"
+        android:textColor="@color/brand_purple"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +167,9 @@
         android:background="@drawable/bg_edit_text"
         android:inputType="textPassword"
         android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        android:textColor="@color/brand_purple"
+        android:textSize="12sp"
+        android:paddingVertical="8dp"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
