--- a/frontend/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_detail.xml
@@ -13,37 +13,26 @@
         app:backgroundTint="@color/brand_dark_blue"
         android:src="@drawable/ic_arrow_left"
         app:tint="@color/brand_light_blue"
+        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/lbl_title"
-        app:layout_constraintBottom_toBottomOf="@id/tv_search_hint"/>
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/lbl_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Search Result!"
+        android:text="User Info!"
         android:textColor="@color/brand_blue"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@id/btn_back"
-       app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_search_hint"
-        app:layout_constraintTop_toBottomOf="@id/lbl_title"
-        android:layout_width="0dp"
-        android:layout_marginEnd="16dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/lbl_title"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="You searched for shigurere"
-        />
+        app:layout_constraintBottom_toBottomOf="@id/btn_back"
+        app:layout_constraintTop_toTopOf="@id/btn_back"/>
 
     <include
-        app:layout_constraintTop_toBottomOf="@id/tv_search_hint"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
