--- a/frontend/app/src/main/res/layout/fragment_friend_list.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_list.xml
@@ -18,6 +18,7 @@
         android:paddingVertical="4dp"
         android:hint="Add a Friend!..."
         android:textColorHint="#475f71"
+        android:textColor="@color/brand_purple"
         app:layout_constraintEnd_toStartOf="@id/btn_friend_request"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/btn_friend_request"
@@ -62,6 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/lbl_title"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
+        android:id="@+id/recycler_view"
         tools:listitem="@layout/item_friend"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
