--- a/frontend/app/src/main/res/navigation/nav_main.xml
+++ b/frontend/app/src/main/res/navigation/nav_main.xml
@@ -63,6 +63,10 @@
             android:id="@+id/action_profile_to_friend_list"
             app:destination="@id/friendListFragment"
             app:popUpTo="@id/homeFragment" />
+        <action
+            android:id="@+id/action_profile_to_splash"
+            app:destination="@id/splashFragment"
+            app:popUpTo="@id/nav_main" />
     </fragment>
     <fragment
         android:id="@+id/friendListFragment"
