--- a/frontend/app/src/main/res/layout/fragment_profile.xml
+++ b/frontend/app/src/main/res/layout/fragment_profile.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
@@ -31,9 +32,9 @@
         android:layout_width="144dp"
         android:layout_height="144dp"
         android:layout_margin="16dp"
-        android:src="@drawable/sample_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_title" />
+        app:layout_constraintTop_toBottomOf="@id/lbl_title"
+        tools:src="@drawable/sample_avatar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_edit_image"
@@ -73,9 +74,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="#69420"
             android:textColor="@color/brand_green"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="#69420" />
 
         <TextView
             android:id="@+id/lbl_username"
@@ -91,9 +92,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="\@RoriRori"
             android:textColor="@color/brand_green"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="\@RoriRori" />
     </LinearLayout>
 
     <TextView
@@ -113,12 +114,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="gomenasai@gmail.com"
         android:textColor="@color/brand_green"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_email" />
+        app:layout_constraintTop_toBottomOf="@id/lbl_email"
+        tools:text="gomenasai@gmail.com" />
 
     <TextView
         android:id="@+id/lbl_display_email"
@@ -149,26 +150,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/bg_edit_text"
+            android:enabled="false"
             android:inputType="textEmailAddress"
             android:paddingHorizontal="16dp"
-            android:textSize="12sp"
             android:paddingVertical="8dp"
-            android:text="Shigurere"
             android:textAlignment="center"
             android:textColor="@color/brand_purple"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lbl_display_email" />
+            app:layout_constraintTop_toBottomOf="@id/lbl_display_email"
+            tools:text="Shigurere" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_confirm_display_name"
             android:layout_width="42dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right|center_vertical"
-            app:backgroundTint="@color/brand_green"
-            app:icon="@drawable/ic_check"
+            app:backgroundTint="@color/brand_yellow"
+            app:icon="@drawable/ic_edit"
             app:iconGravity="textStart"
             app:iconPadding="@null"
+            app:iconTint="@color/brand_purple"
             app:shapeAppearanceOverlay="?shapeAppearanceCornerExtraLarge" />
 
     </FrameLayout>
@@ -179,12 +182,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginBottom="12dp"
         android:text="Logout"
         android:textColor="@color/brand_purple"
         app:backgroundTint="@color/brand_yellow"
         app:iconGravity="textStart"
         app:iconPadding="@null"
-        android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -206,10 +209,10 @@
         app:shapeAppearanceOverlay="?shapeAppearanceCornerExtraLarge" />
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/loading_indicator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
