--- a/frontend/app/src/main/res/drawable/bg_edit_text.xml
+++ b/frontend/app/src/main/res/drawable/bg_edit_text.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/rounded_edittext.xml -->
+<?xml version="1.0" encoding="utf-8"?><!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:shape="rectangle">
 
     <solid android:color="@color/brand_light_blue" />
     <corners
-        android:bottomRightRadius="16dp"
         android:bottomLeftRadius="16dp"
+        android:bottomRightRadius="16dp"
         android:topLeftRadius="16dp"
         android:topRightRadius="16dp" />
 </shape>
