--- a/frontend/app/src/main/res/layout/fragment_friend_detail.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_detail.xml
@@ -5,19 +5,26 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
-        app:maxImageSize="36dp"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/brand_dark_blue"
-        android:src="@drawable/ic_arrow_left"
-        app:tint="@color/brand_light_blue"
-        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_arrow_left"
+        app:backgroundTint="@color/brand_dark_blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:maxImageSize="36dp"
+        app:tint="@color/brand_light_blue" />
 
     <TextView
         android:id="@+id/lbl_title"
@@ -27,15 +34,16 @@
         android:text="User Info!"
         android:textColor="@color/brand_blue"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@id/btn_back"
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
-        app:layout_constraintTop_toTopOf="@id/btn_back"/>
+        app:layout_constraintStart_toEndOf="@id/btn_back"
+        app:layout_constraintTop_toTopOf="@id/btn_back" />
 
     <include
-        app:layout_constraintTop_toBottomOf="@id/lbl_title"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+        android:id="@+id/layout_detail"
+        layout="@layout/layout_user_detail"
         android:layout_width="match_parent"
-        layout="@layout/layout_user_detail"/>
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
