--- a/frontend/app/src/main/res/layout/fragment_friend_list.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_list.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+
     <EditText
         android:id="@+id/ed_add_friend"
         android:layout_width="0dp"
@@ -13,29 +21,30 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit_text"
+        android:hint="Add a Friend!..."
+        android:imeOptions="actionSearch"
         android:inputType="textEmailAddress"
         android:paddingHorizontal="16dp"
         android:paddingVertical="4dp"
-        android:hint="Add a Friend!..."
-        android:textColorHint="#475f71"
         android:textColor="@color/brand_purple"
+        android:textColorHint="#475f71"
+        app:layout_constraintBottom_toBottomOf="@id/btn_friend_request"
         app:layout_constraintEnd_toStartOf="@id/btn_friend_request"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/btn_friend_request"
-        app:layout_constraintTop_toTopOf="@id/btn_friend_request"/>
+        app:layout_constraintTop_toTopOf="@id/btn_friend_request" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_friend_request"
         android:layout_width="wrap_content"
-        app:maxImageSize="36dp"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/brand_dark_blue"
-        android:src="@drawable/ic_friend_request"
-        app:tint="@color/brand_light_blue"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
+        android:src="@drawable/ic_friend_request"
+        app:backgroundTint="@color/brand_dark_blue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+        app:layout_constraintTop_toBottomOf="@id/tab_layout"
+        app:maxImageSize="36dp"
+        app:tint="@color/brand_light_blue" />
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -58,12 +67,25 @@
         app:layout_constraintTop_toBottomOf="@id/ed_add_friend" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/lbl_title"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:id="@+id/recycler_view"
-        tools:listitem="@layout/item_friend"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title"
+        tools:listitem="@layout/item_user" />
+
+    <TextView
+        android:id="@+id/lbl_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="It's empty here"
+        android:textAlignment="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
