--- a/frontend/app/src/main/res/layout/fragment_friend_request.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_request.xml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg">
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
-        app:maxImageSize="36dp"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/brand_dark_blue"
-        android:src="@drawable/ic_arrow_left"
-        app:tint="@color/brand_light_blue"
-        android:layout_marginTop="16dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_arrow_left"
+        app:backgroundTint="@color/brand_dark_blue"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:maxImageSize="36dp"
+        app:tint="@color/brand_light_blue" />
 
     <TextView
         android:id="@+id/lbl_title"
@@ -28,17 +35,30 @@
         android:text="Request!"
         android:textColor="@color/brand_blue"
         android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@id/btn_back"
         app:layout_constraintBottom_toBottomOf="@id/btn_back"
-        app:layout_constraintTop_toTopOf="@id/btn_back"/>
+        app:layout_constraintStart_toEndOf="@id/btn_back"
+        app:layout_constraintTop_toTopOf="@id/btn_back" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/lbl_title"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_margin="16dp"
-        android:id="@+id/recycler_view"
-        tools:listitem="@layout/item_friend"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title"
+        tools:listitem="@layout/item_user" />
+
+    <TextView
+        android:id="@+id/lbl_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="It's empty here"
+        android:textAlignment="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
