--- a/frontend/app/src/main/res/layout/fragment_friend_search.xml
+++ b/frontend/app/src/main/res/layout/fragment_friend_search.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
-        app:maxImageSize="36dp"
         android:layout_height="wrap_content"
-        app:backgroundTint="@color/brand_dark_blue"
-        android:src="@drawable/ic_arrow_left"
-        app:tint="@color/brand_light_blue"
         android:layout_marginHorizontal="16dp"
+        android:src="@drawable/ic_arrow_left"
+        app:backgroundTint="@color/brand_dark_blue"
+        app:layout_constraintBottom_toBottomOf="@id/lbl_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/lbl_title"
-        app:layout_constraintBottom_toBottomOf="@id/tv_search_hint"/>
+        app:maxImageSize="36dp"
+        app:tint="@color/brand_light_blue" />
 
     <TextView
         android:id="@+id/lbl_title"
@@ -27,26 +36,40 @@
         android:textColor="@color/brand_blue"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@id/btn_back"
-       app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_search_hint"
-        app:layout_constraintTop_toBottomOf="@id/lbl_title"
+        android:id="@+id/lbl_subtitle"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/lbl_title"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="You searched for shigurere"
-        />
+        app:layout_constraintStart_toStartOf="@id/lbl_title"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title"
+        tools:text="You searched for shigurere" />
 
-    <include
-        app:layout_constraintTop_toBottomOf="@id/tv_search_hint"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        layout="@layout/layout_user_detail"/>
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_subtitle"
+        tools:listitem="@layout/item_user" />
+
+    <TextView
+        android:id="@+id/lbl_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="It's empty here"
+        android:textAlignment="center"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lbl_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
