--- a/frontend/app/src/main/res/layout/layout_user_detail.xml
+++ b/frontend/app/src/main/res/layout/layout_user_detail.xml
@@ -11,9 +11,9 @@
         android:layout_width="144dp"
         android:layout_height="144dp"
         android:layout_margin="16dp"
-        android:src="@drawable/sample_avatar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/sample_avatar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_edit_image"
@@ -53,9 +53,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="#69420"
             android:textColor="@color/brand_green"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="#69420" />
 
         <TextView
             android:id="@+id/lbl_username"
@@ -71,9 +71,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text="\@RoriRori"
             android:textColor="@color/brand_green"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            tools:text="\@RoriRori" />
     </LinearLayout>
 
     <TextView
@@ -93,10 +93,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="shigurere"
         android:textColor="@color/brand_green"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/lbl_display_name" />
+        app:layout_constraintTop_toBottomOf="@id/lbl_display_name"
+        tools:text="shigurere" />
+
+    <include
+        android:id="@+id/layout_cta_request"
+        layout="@layout/layout_cta_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tv_display_name"
+        tools:visibility="gone" />
+
+    <include
+        android:id="@+id/layout_cta_incoming_request"
+        layout="@layout/layout_cta_incoming_request"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tv_display_name"
+        tools:visibility="visible" />
+
+    <include
+        android:id="@+id/layout_cta_friend"
+        layout="@layout/layout_cta_friend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/tv_display_name"
+        tools:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
